removed popover logo, instead added z-index to main logo to ensure visibility.

--- a/css/products.css
+++ b/css/products.css
@@ -45,7 +45,7 @@ width: 100%;
   font-size: 24px;
   text-transform: uppercase;
   color: #1B1A1E;
-  z-index: 1000;
+  z-index: 9999;
   margin-top: 1.5rem;
   text-decoration: none;
 
